popup window y-overflow fix

--- a/assignment4/src/3309-store/client/src/css/style.scss
+++ b/assignment4/src/3309-store/client/src/css/style.scss
@@ -298,6 +298,7 @@
   .window {
     transition: all 0.3s ease-in-out;
     transform: translateX(40rem);
+    overflow-y:scroll;
   }
   &.on {
     .overlay {
